--- a/css/global/button.css
+++ b/css/global/button.css
@@ -4,7 +4,9 @@
   line-height: 1.5;
   border-radius: 28px;
   padding: 10.5px 24px;
-  transition: background 150ms ease-in-out;
+  transition: 150ms ease-in-out;
+  transition-property: background, opacity;
+  display: inline-block;
 }
 .button.dark {
   background: var(--color-blue-900);
@@ -18,6 +20,16 @@
   background: var(--gradient-pink);
   color: var(--color-white);
 }
-.button.dark:hover {
-  background: var(--color-blue-600);
+.button.pink:hover {
+  opacity: 0.5;
+}
+@media (min-width >= 50.625em) {
+  .button {
+    padding: 10.5px 24px;
+  }
+}
+@media (min-width >= 75em) {
+  .button {
+    padding: 16px 32px;
+  }
 }
