--- a/css/global/boilerplate.css
+++ b/css/global/boilerplate.css
@@ -1,8 +1,8 @@
 :root {
   --color-blue-900: hsl(233, 54%, 16%);
   --color-blue-600: hsl(234, 25%, 52%);
-  --pink-600: hsl(341, 92%, 62%);
-  --pink-300: hsl(341, 100%, 83%);
+  --color-pink-600: hsl(341, 92%, 62%);
+  --color-pink-300: hsl(341, 100%, 83%);
   --color-grey: hsl(232, 10%, 56%);
   --color-white: #fff;
   --gradient-pink: linear-gradient(hsl(13, 100%, 64%), hsl(322, 87%, 55%));
@@ -13,12 +13,18 @@
 *::after,
 *::before {
   box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+html {
+  overflow-x: clip;
 }
 body {
   margin: 0;
   font-family: "Plus Jakarta Sans", Arial, Helvetica, sans-serif;
   /* to make sure the font-weight is 500 */
   font-weight: 500;
+  /* max-width: 1440px; */
+  margin-inline: auto;
 }
 h1,
 h2,
@@ -32,12 +38,28 @@ img {
   max-width: 100%;
   /* to make sure image don't skewed(miring/tidak simetris ) */
   height: auto;
+  width: 476.8125;
+}
+img.logo {
+  transition: opacity 150ms ease-in-out;
+}
+img.logo:hover {
+  opacity: 50%;
+}
+
+@media (width >= 75em) {
+  .logo {
+    width: 6.9375;
+  }
+  .logo:hover {
+    opacity: 50%;
+  }
 }
 a {
   text-decoration: none;
 }
 p {
-max-width: 50ch;
+  max-width: 35ch;
   color: var(--color-grey);
   line-height: 1.5;
 }
