--- a/css/global/button.css
+++ b/css/global/button.css
@@ -5,8 +5,8 @@
   border-radius: 28px;
   padding: 10.5px 24px;
   transition: 150ms ease-in-out;
-  transition-property: background, opacity;
   display: inline-block;
+  transition-property: background, opacity;
 }
 .button.dark {
   background: var(--color-blue-900);
@@ -23,13 +23,15 @@
 .button.pink:hover {
   opacity: 0.5;
 }
+.button.purple {
+  background: var(--gradient-purple);
+  color: var(--color-white);
+}
+.button.putple:hover {
+  opacity: 0.5;
+}
 @media (min-width >= 50.625em) {
   .button {
     padding: 10.5px 24px;
-  }
-}
-@media (min-width >= 75em) {
-  .button {
-    padding: 16px 32px;
   }
 }
